Enforce InstanceIdentifier creation
We currently allow an InstanceIdentifier to be created for any
DataObject, which is wrong, as that includes raw RpcInputs,
Notifications and the like.

Update creation methods to require proper relationship with DataRoot
instances.

Change-Id: I49498b2ca24fc16df2d83c9178d3f82e6e83e3ae
Signed-off-by: Robert Varga <robert.varga@pantheon.tech>